# ori-engine

./: .gitignore  Cargo.toml  Engine_Architecture.sla  Engine_Architecture.sla.autosave  LICENSE  README.md
data/: test.fs  test.vs
examples/: teapod.rs  triangle.rs
examples/simple_scene/: Apes.fbx  Apes.gltf  BlenderSave.blend  BlenderSave.blend.REMOVED.git-id  BlenderSave.blend1  Cargo.toml  Helix.fbx  Helix.fbx.REMOVED.git-id  Helix.gltf  Ring.fbx  Ring.gltf
examples/simple_scene/src/: main.rs
media/: .~lock.Drawing_02_impress.odp#
src/: lib.rs
src/core/: asset_manager.rs  camera.rs  empty.rs  engine_settings.rs  light.rs  material.rs  material_manager.rs  mesh.rs  mesh_manager.rs  mod.rs
src/core/resource_management/: asset_manager.rs  material_manager.rs  mesh_manager.rs  mod.rs  scene_manager.rs  texture_manager.rs
src/core/resources/: camera.rs  empty.rs  light.rs  material.rs  mesh.rs  mod.rs  texture.rs
src/core/simple_scene_system/: mod.rs  node.rs  node_member.rs
src/input/: input_handler.rs  mod.rs
src/render/: mod.rs  pipeline.rs  pipeline_infos.rs  pipeline_manager.rs  renderer.rs  uniform_manager.rs  window.rs
src/tools/: assimp_importer.rs  gltf_importer.rs  mod.rs
