[package]
name = "ori-engine"
version = "0.1.0"
authors = ["Siebencorgie <siebencorgie@googlemail.com>"]

[dependencies]
winit = "0.7.5"
vulkano = { path = "lib/vulkano/vulkano" }
vulkano-shader-derive = { path = "lib/vulkano/vulkano-shader-derive" }
vulkano-win = { path = "lib/vulkano/vulkano-win" }

image = "0.15.0"
nalgebra = "0.12.3"
ncollide = "0.12.0"
assimp = "0.2"
time = "0.1.37"

[[example]]
name = "simple"
path = "examples/simple_scene/src/main.rs"
