[package]
name = "ori-engine"
version = "0.1.0"
authors = ["Siebencorgie <siebencorgie@googlemail.com>"]

[dependencies]
winit = "0.7.6"
vulkano = { path = "lib/vulkano/vulkano" }
vulkano-shader-derive = { path = "lib/vulkano/vulkano-shader-derive" }
vulkano-win = { path = "lib/vulkano/vulkano-win" }

image = "0.15.0"
nalgebra = "0.13.0"
nphysics3d = "0.7.1"
ncollide = "0.13.0"
assimp = "0.2.1"
time = "0.1.37"

[[example]]
name = "simple"
path = "examples/simple_scene/src/main.rs"
