[package]
name = "ori-engine"
version = "0.1.0"
authors = ["Siebencorgie <siebencorgie@googlemail.com>"]

[dependencies]
winit = "0.7.6"
vulkano = { path = "lib/vulkano/vulkano" }
vulkano-shader-derive = { path = "lib/vulkano/vulkano-shader-derive" }
vulkano-win = { path = "lib/vulkano/vulkano-win" }

image = "0.15.0"
cgmath = "0.15.0"
collision = { path = "lib/collision-rs" }
assimp = "0.2.1"
time = "0.1.37"

[[example]]
name = "simple"
path = "examples/simple_scene/src/main.rs"
